--- a/daemon/player++.config.example
+++ b/daemon/player++.config.example
@@ -1,3 +1,5 @@
 #daemon_pipe    =   /tmp/dplayer++
 #client_pipe 	= 	/tmp/cplayer++
 music_folder    =   /home/david/Music
+auto_start		= 	false
+cache_file      = 	/home/david/.config/.player++.cache
