--- a/player++.config.example
+++ b/player++.config.example
@@ -1,5 +1,5 @@
 #daemon_pipe  = /tmp/dplayer++
 #client_pipe  = /tmp/cplayer++
-music_folder  = /home/david/Music
+music_folder  = ~/Music
 auto_start    = false
 pid_file      = /tmp/player++.pid
