--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ target_compile_features(dplayer++ PUBLIC cxx_range_for cxx_auto_type cxx_lambdas
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
 #Check if boost exists
-find_package(Boost 1.60.0 COMPONENTS filesystem program_options) 
+find_package(Boost COMPONENTS filesystem program_options) 
 
 if(NOT Boost_FOUND)
     message( FATAL_ERROR "Boost libraries not found." )
