--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,10 @@ matrix:
       env: COMPILER=clang++-3.7
 
 
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -y libmpg123-dev libsfml-dev libboost-filesystem-dev libboost-program-options-dev libtag1-dev
+
 script:
   - mkdir build
   - cd build
