--- a/.travis.yml
+++ b/.travis.yml
@@ -1,40 +1,30 @@
 language: cpp
 sudo: required
-dist: trusty
+dist: wily
 
 matrix:
   include:
     - compiler: gcc
       addons:
         apt:
-          sources:
-            - ubuntu-toolchain-r-test
           packages:
             - g++-4.9
       env: COMPILER=g++-4.9
     - compiler: gcc
       addons:
         apt:
-          sources:
-            - ubuntu-toolchain-r-test
           packages:
             - g++-5
       env: COMPILER=g++-5
     - compiler: clang
       addons:
         apt:
-          sources:
-            - ubuntu-toolchain-r-test
-            - llvm-toolchain-precise-3.6
           packages:
             - clang-3.6
       env: COMPILER=clang++-3.6
     - compiler: clang
       addons:
         apt:
-          sources:
-            - ubuntu-toolchain-r-test
-            - llvm-toolchain-precise-3.7
           packages:
             - clang-3.7
       env: COMPILER=clang++-3.7
@@ -47,4 +37,4 @@ before_install:
 script:
   - mkdir build
   - cd build
-  - cmake -DCMAKE_CXX_COMPILER=$COMPILER .. && make
+  - cmake -DCMAKE_CXX_COMPILER=$COMPILER .. && make VERBOSE=1
