--- a/.travis.yml
+++ b/.travis.yml
@@ -1,34 +1,25 @@
 language: cpp
 sudo: required
-dist: wily
+dist: trusty
 
 matrix:
   include:
     - compiler: gcc
       addons:
         apt:
+          sources:
+            - ubuntu-toolchain-r-test
           packages:
             - g++-4.9
       env: COMPILER=g++-4.9
     - compiler: gcc
       addons:
         apt:
+          sources:
+            - ubuntu-toolchain-r-test
           packages:
             - g++-5
       env: COMPILER=g++-5
-    - compiler: clang
-      addons:
-        apt:
-          packages:
-            - clang-3.6
-      env: COMPILER=clang++-3.6
-    - compiler: clang
-      addons:
-        apt:
-          packages:
-            - clang-3.7
-      env: COMPILER=clang++-3.7
-
 
 before_install:
   - sudo apt-get update -qq
