--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ matrix:
 
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -y libmpg123-dev libsfml-dev libboost-filesystem-dev libboost-program-options-dev libtag1-dev
+  - sudo apt-get install -y libmpg123-dev libsfml-dev libboost-filesystem-dev libboost-program-options-dev libtag1-dev libspdlog-dev
 
 script:
   - mkdir build
